Minimal VM build broken after JDK-8232050

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 14
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b19
    • x86
    • linux

      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/sharedRuntime_x86_64.o: In function `SharedRuntime::generate_native_wrapper(MacroAssembler*, methodHandle const&, int, BasicType*, VMRegPair*, BasicType, unsigned char*)':
      /home/fool/workspace/jdk-dev/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2413: undefined reference to `Klass::java_mirror() const'

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: