8232151: Minimal VM build broken after JDK-8232050

Reviewed-by: dholmes, clanger